--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "firebase": "^5.0.4",
     "get-value": "^3.0.1",
-    "probot": "^6.0.0"
+    "probot": "^6.0.0",
+    "slack-webhook": "^1.0.0"
   },
   "devDependencies": {
     "jest": "^22.4.3",
