--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
     "expect": "^24.5.0",
     "firebase": "^6.3.4",
     "get-value": "^3.0.1",
+    "jest": "^24.5.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
     "probot": "^9.0.0",
     "probot-config": "^1.1.0",
-    "slack-webhook": "^1.0.0"
+    "slack-webhook": "^1.0.0",
+    "standard": "^13.1.0"
   },
   "devDependencies": {
-    "jest": "^24.5.0",
     "nodemon": "^1.18.10",
     "smee-client": "^1.0.2",
-    "standard": "^13.1.0"
   },
   "engines": {
     "node": ">= 8.3.0"
