--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "nodemon": "^1.18.10",
-    "smee-client": "^1.0.2",
+    "smee-client": "^1.0.2"
   },
   "engines": {
     "node": ">= 8.3.0"
