--- a/package.json
+++ b/package.json
@@ -20,25 +20,38 @@
     "test:watch": "jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
-    "bitly": "^6.0.7",
-    "expect": "^24.5.0",
-    "firebase": "^6.3.4",
+    "@babel/runtime": "^7.11.2",
+    "bitly": "^7.1.0",
+    "chalk": "^4.1.0",
+    "expect": "^26.4.2",
     "get-value": "^3.0.1",
-    "jest": "^24.5.0",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.23",
-    "probot": "^9.0.0",
+    "jest": "^26.4.2",
+    "moment": "^2.28.0",
+    "moment-timezone": "^0.5.31",
+    "probot": "^10.2.0",
     "probot-config": "^1.1.0",
     "slack-webhook": "^1.0.0",
-    "standard": "^13.1.0"
+    "standard": "^14.3.4"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10",
-    "smee-client": "^1.0.2"
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/node": "^7.10.5",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-typescript": "^7.10.4",
+    "@babel/register": "^7.11.5",
+    "@types/node": "^14.10.1",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-static-fs": "^3.0.0",
+    "nodemon": "^2.0.4",
+    "smee-client": "^1.2.2",
+    "ts-lib": "0.0.5",
+    "ts-node": "^9.0.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.0.2"
   },
-  "engines": {
-    "node": ">= 8.3.0"
-  },
+  "engines": {},
   "standard": {
     "env": [
       "jest"
